tests/golden/fixtures/syntax-err-address-of-unknown/expected.err
Error: undefined symbol 'shell_main' referenced by `&&`
   ╭─[ tests/golden/fixtures/syntax-err-address-of-unknown/input.k65:7:11 ]
   │
 7 │     lda &&shell_main        // ERR: shell_main is not declared anywhere
   │           ─────┬────  
   │                ╰────── here
   │ 
   │ Help: no `func`, `var`, `data`, or label named 'shell_main' is declared in this workspace
───╯
